--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,8 @@
 {
   "extends": "@antfu",
   "rules": {
-    "no-console": "off"
+    "no-console": "off",
+    "curly": "off",
+    "@typescript-eslint/brace-style": ["error", "1tbs", { "allowSingleLine": true }]
   }
 }
