--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "build": "unbuild",
     "lint": "eslint .",
     "start": "tsx ./src/index.ts",
-    "watch": "tsx watch ./src/index.ts"
+    "watch": "tsx watch ./src/index.ts",
+    "prepublishOnly": "pnpm build",
+    "release": "bump --commit --push --tag && npm publish"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.23.1",
@@ -48,6 +50,7 @@
     "eslint": "^8.15.0",
     "tsx": "^3.3.1",
     "typescript": "^4.6.4",
-    "unbuild": "^0.7.4"
+    "unbuild": "^0.7.4",
+    "version-bump-prompt": "^6.1.0"
   }
 }
