--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "type": "git",
     "url": "git+https://github.com/serkodev/vanilla-themes.git"
   },
-  "main": "./dist/index.mjs",
+  "main": "./dist/index.global.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
-      "require": "./dist/index.cjs",
+      "require": "./dist/index.js",
       "import": "./dist/index.mjs",
       "types": "./dist/index.d.ts"
     }
@@ -36,11 +36,10 @@
     "dist"
   ],
   "scripts": {
-    "dev": "unbuild --stub",
-    "build": "unbuild",
+    "build": "tsup",
+    "watch": "tsup --watch",
     "lint": "eslint .",
     "start": "tsx ./src/index.ts",
-    "watch": "tsx watch ./src/index.ts",
     "prepublishOnly": "pnpm build",
     "release": "bump --commit --push --tag && npm publish"
   },
@@ -48,9 +47,10 @@
     "@antfu/eslint-config": "^0.23.1",
     "@types/node": "^17.0.35",
     "eslint": "^8.15.0",
+    "rollup": "^2.74.1",
+    "tsup": "^5.12.8",
     "tsx": "^3.3.1",
     "typescript": "^4.6.4",
-    "unbuild": "^0.7.4",
     "version-bump-prompt": "^6.1.0"
   }
 }
