chore: update tsconfig exclude paths

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,6 @@
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "skipDefaultLibCheck": true
-  }
+  },
+  "exclude": ["node_modules", "dist"]
 }
